--- a/pet-adopt-client/package.json
+++ b/pet-adopt-client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "social-media-icons-react": "^1.1.10",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
