--- a/pet-adopt-server/Gemfile
+++ b/pet-adopt-server/Gemfile
@@ -1,4 +1,5 @@
 source "https://rubygems.org"
+ruby '>= 2.7', '< 3.1'
 
 #DSL for quickly creating web applictions 
 gem "sinatra", "~> 2.1"
@@ -27,10 +28,8 @@ gem "sqlite3", "~> 1.4"
 # Require all files in a folder
 gem "require_all", "~> 3.0"
 
-# These gems will only be used when we are running the application locally
-group :development do
-  gem "pry", "~> 0.14.1"
+# Automatically reload when there are changes
+gem "rerun"
 
-  # Automatically reload when there are changes
-  gem "rerun"
-end
+gem 'pry'
+
