--- a/pet-adopt-server/Gemfile
+++ b/pet-adopt-server/Gemfile
@@ -1,5 +1,5 @@
 source "https://rubygems.org"
-ruby '>= 2.7', '< 3.1'
+
 
 #DSL for quickly creating web applictions 
 gem "sinatra", "~> 2.1"
@@ -29,7 +29,9 @@ gem "sqlite3", "~> 1.4"
 gem "require_all", "~> 3.0"
 
 # Automatically reload when there are changes
-gem "rerun"
+group :development do
+  gem "pry", "~> 0.14.1"
 
-gem 'pry'
+  gem "rerun"
+end
 
